# REACT-EEG

./: .gitignore  AUDIT-deid-export-v19.md  AUDIT-live-acquire-v19.md  AUDIT-v19.md  README.md  RELEASING.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
.github/workflows/: release.yml
bridge/: PROTOCOL.md  README.md  mock-bridge.mjs  pieeg_bridge.py
docs/: DEMO_CONNECT.md
public/seed-edfs/: MAT-S00-arithmetic.edf  MAT-S00-rest.edf  manifest.json
scripts/: build-desktop.mjs
src/: App.jsx  annotations.js  deid.js  dsp.js  edf-signals.js  edf.js  ica.js  interrater.js  live-metrics.js  live-stream.js  main.jsx  manifests.js  pieeg-demo-auth.js  pieeg-recordings.js  sidecar.js  version.js
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
test/: annotations.migration.test.js  deid.test.js  dsp.golden.test.js  edf-signals.test.js  edf.test.js  ica.test.js  interrater.test.js  live-metrics.test.js  live-stream.test.js  manifests.test.js  pieeg-demo-auth.test.js  pieeg-recordings.test.js  seed-fixtures.js  versioning.test.js
